--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="SkiBuds- find friends to ski and snowboard with" />
     <link rel="apple-touch-icon" href="logo192.png" />
 
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Open - React Template</title>
+    <title>SkiBuds</title>
 </head>
 
 <body class="has-animations">
